apps/tawala-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nethub
  labels:
    app.kubernetes.io/name: nethub
    app.kubernetes.io/part-of: nethub
