apps/tawala-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tawala-service
  namespace: nethub
  labels:
    app: tawala-backend
    app.kubernetes.io/name: tawala-backend
spec:
  type: ClusterIP
  selector:
    app: tawala-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
